# analyse_cooking_app

./: .gitattributes  README.md
etude_app_cuisine/: README.md  pyproject.toml  requirements.txt  script.ipynb  test_classes.ipynb
etude_app_cuisine/app/: __init__.py  app_v1.py  utils.py
etude_app_cuisine/app/data/: dico_all_month_ingredient1.csv  dico_all_month_ingredient10.csv  dico_all_month_ingredient6.csv  dico_all_month_ingredient8.csv
etude_app_cuisine/app/tests/: test_app_v1.py
etude_app_cuisine/archive/: app_v1.py  app_v2.py  load_data.py  models.py  test_classes.ipynb  utils.py
etude_app_cuisine/prototype/: test_classes.ipynb
etude_app_cuisine/src/: LoadData.py  app_v1.py  app_v2.py  app_v3.py  debug.ipynb  load_data.py  models.py  requirements.txt
etude_app_cuisine/src/app/: __init__.py  app_v1.py  utils.py
etude_app_cuisine/src/data/: data_recipes_tokenised.json  dico_all_month_ingredient11.csv  dico_all_month_ingredient3.csv  dico_all_month_ingredient5.csv
etude_app_cuisine/src/pages/: models.py  page1.py  page2.py
etude_app_cuisine/tests/: __init__.py  app_streamlit_scoring.py  app_v1.py  load_data.py  models.py  recipe_scorer.py  test.py  test1.py  test_ingredient_matcher.py  test_recipe_scorer.py  test_seasonality_checker.py  utils.py
etude_app_cuisine/tests/data/: dico_all_month_ingredient1.csv  dico_all_month_ingredient10.csv  dico_all_month_ingredient11.csv  dico_all_month_ingredient12.csv  dico_all_month_ingredient2.csv  dico_all_month_ingredient3.csv  dico_all_month_ingredient4.csv  dico_all_month_ingredient5.csv  (+17 more)
(+4 files in other folders)
