[tool.poetry]
name = "etude-app-cuisine"
version = "0.1.0"
description = ""
authors = ["ramzinaji <ramzi.naji10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.2"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
streamlit = "^1.39.0"
flask = "^3.0.3"
statsmodels = "^0.14.4"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
