[tool.poetry]
name = "etude-app-cuisine"
version = "0.1.0"
description = ""
authors = ["ramzinaji <ramzi.naji10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = ">=2.0.0,<2.1.0"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
streamlit = "^1.39.0"
flask = "^3.0.3"
statsmodels = "^0.14.4"
ipykernel = "^6.29.5"
spacy = "^3.8.2"
spacy-transformers = "^1.3.5"
torch = "^2.5.0"
inflect = "^7.4.0"
seaborn = "^0.13.2"
pytest = "^8.3.3"
flake8 = "^7.1.1"
black = "^24.10.0"
autopep8 = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
